fix footer gap

--- a/css/main.css
+++ b/css/main.css
@@ -1119,7 +1119,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 4rem;
+  flex-wrap: wrap;
+  gap: 2rem 4rem;
 }
 @media screen and (max-width: 1024px) {
   .footer__payments-list {
@@ -1173,7 +1174,8 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 3rem;
+  flex-wrap: wrap;
+  gap: 2rem 4rem;
 }
 @media screen and (max-width: 1024px) {
   .footer__contacts-list {
